--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   ],
   "rules": {
     "react-hooks/exhaustive-deps": 0,
-    "@typescript-eslint/no-explicit-any": 0
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }]
   }
 }
